test/kobra-code/syntax-errors/paren-wrapped-closure-literal.ks
$ x = (close {}:
  return 20
end)